--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ header li {
     margin: 0 auto;
 }
 
+.container-small {
+    max-width: 1000px;
+    margin: 0 auto;
+}
 header .logo {
     margin-right: 30px;
 }
@@ -142,7 +146,7 @@ header .actions span {
 }
 .title h2 {
     font-style: 40px;
-
+    color: rgba(102, 69, 53, 1)
 }
 .title h2 span {
     color: rgba(117, 181, 200, 1);
@@ -194,4 +198,109 @@ header .actions span {
 }
 .card2 .card-left {
     margin-left: 180px;
+}
+
+.offer .wrapper {
+    background-color: rgba(19, 176, 177, 1);
+    border-radius: 20px;
+    color: #fff;
+    padding: 45px 103px;
+}
+.offer-left {
+    width: 484px;
+    display: inline-block;
+}
+.offer-left h3 {
+    font-size: 30px;
+    margin-bottom: 18px;
+}
+.offer a {
+    background-color: rgba(255, 133, 67, 1);
+    display: inline-block; 
+    padding: 17px 124px;
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: 30px;
+    margin-left: 80px;
+    vertical-align: 30px;
+}
+
+.description {
+    margin-bottom: 100px;
+    padding: 60px 0;
+}
+.description h3 {
+    display: inline-block;
+    font-size: 40px;
+    width: 400px;
+    vertical-align: 120px;
+    margin-left: 100px;
+}
+.description .color {
+    color: rgba(117, 181, 200, 1);
+    position: relative;
+}
+/* .description .border {
+    background-color: black;
+    display: block;
+    height: 3px;
+    width: 260px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+} */
+
+/* кривая clip-path */
+/* .description .color::after {
+    background-color: red;
+    content: "";
+    position: absolute;
+    bottom: -10px;
+    left: 70px;
+    width: 270px;
+    height: 10px; Высота области с линией
+    background-color: black; Цвет линии
+    clip-path: path("M0,10 C0,10 75,5 290,0");
+} */
+
+/* кривая svg*/
+.description .color svg {
+    /* background-color: red; */
+    position: absolute;
+    bottom: -10px;
+    left: 80px;
+}
+
+.battery {
+    padding: 28px 0;
+    text-align: center;
+}
+
+.battery .circle {
+    background-color: lightslategrey;
+    border-radius: 50%;
+    width: 130px;
+    height: 130px;
+    display: inline-block;
+}
+.battery svg {
+    color: #fff;
+    width: 100px;
+    height: 54px;
+    display: block;
+    margin: 20px auto 10px;
+}
+.battery label {
+    color: #fff;
+    font-size: 21px;
+    display: block;
+    margin: 0 auto;
+}
+.battery h4 {
+    font-size: 32px;
+    width: 250px;
+    margin: 0 auto;
+    line-height:50px;
 }
