--- a/style.css
+++ b/style.css
@@ -375,6 +375,46 @@ header .actions span {
     left: 500px;
 }
 
+.explanation h2 {
+    margin-top: 34px;
+    font-size: 40px;
+}
+
+.explanation p {
+    margin-top: 25px;
+}
+
+.explanation .cards > * {
+    display: inline-block;
+    vertical-align: middle;
+    width: 355px;
+    height: 534px;
+    border-radius: 13px;
+    margin: 0 10px 20px 0;
+    padding: 10px 20px;
+    color: rgba(102, 69, 53, 1);
+    background-color: rgb(245, 245, 245);      
+}
+/* .explanation .cards:nth-child(3n) {
+    margin-right: 0;
+} */
+.explanation .cards h3 {
+    font-size: 33px;
+    padding-top: 40px;
+}
+.explanation .cards p {
+    font-size: 18px;
+    height: 80px;
+}
+.explanation .cards img {
+    width: 319px;
+    height: 275px;
+    border-radius: 20px;
+}
+.explanation .card1 img {
+    box-shadow: 0px 20px 25px gray;
+}
+
 footer {
     background-color: rgba(156, 126, 110, 1);
     color: #fff;
