--- a/style.css
+++ b/style.css
@@ -375,6 +375,11 @@ header .actions span {
     left: 500px;
 }
 
+.explanation {
+    margin-top: 30px;
+    background-color: rgb(245, 245, 245);
+}
+
 .explanation h2 {
     margin-top: 34px;
     font-size: 40px;
@@ -384,7 +389,7 @@ header .actions span {
     margin-top: 25px;
 }
 
-.explanation .cards > * {
+/* .explanation .cards > * {
     display: inline-block;
     vertical-align: middle;
     width: 355px;
@@ -395,9 +400,9 @@ header .actions span {
     color: rgba(102, 69, 53, 1);
     background-color: rgb(245, 245, 245);      
 }
-/* .explanation .cards:nth-child(3n) {
+.explanation .cards:nth-child(3n) {
     margin-right: 0;
-} */
+}
 .explanation .cards h3 {
     font-size: 33px;
     padding-top: 40px;
@@ -412,6 +417,35 @@ header .actions span {
     border-radius: 20px;
 }
 .explanation .card1 img {
+    box-shadow: 0px 20px 25px gray;
+} */
+
+.explanation table {
+    border-spacing: 10px 20px;
+    color: rgba(102, 69, 53, 1);
+    
+}
+.explanation td {
+    background-color: rgb(255, 255, 255);
+    border-radius: 13px;
+    padding: 0 26px 36px;
+     
+}
+.explanation td h3 {
+    font-size: 33px;
+    padding-top: 40px;
+}
+.explanation td p {
+    font-size: 18px;
+    height: 80px;
+}
+.explanation td img {
+    width: 305px;
+    height: 265px;
+    object-fit: cover;
+    border-radius: 20px;
+}
+.explanation img:hover {
     box-shadow: 0px 20px 25px gray;
 }
 
