--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ header .actions span {
     color: rgba(102, 69, 53, 1);
 }
 
-.card-left::before {
+.tutorial .card-left::before {
     content: "Easy to control!";
     position: absolute;
     top: 50px;
@@ -190,13 +190,13 @@ header .actions span {
     border-radius: 7.59px 7.59px 7.59px 0;
     background-color: rgba(240, 240, 238, 1);
 }
-.card2 {
+.tutorial .card2 {
     margin-top: 77px;
 }
-.card2 .card-right {
+.tutorial .card2 .card-right {
     margin-left: 0;
 }
-.card2 .card-left {
+.tutorial .card2 .card-left {
     margin-left: 180px;
 }
 
@@ -389,63 +389,37 @@ header .actions span {
     margin-top: 25px;
 }
 
-/* .explanation .cards > * {
+.explanation .row {
+    margin: 20px 0;
+}
+.explanation .row > * {
     display: inline-block;
-    vertical-align: middle;
-    width: 355px;
+    width: 358px;
     height: 534px;
     border-radius: 13px;
-    margin: 0 10px 20px 0;
-    padding: 10px 20px;
+    padding: 0px 26px;
     color: rgba(102, 69, 53, 1);
-    background-color: rgb(245, 245, 245);      
+    background-color: #fff;
 }
-.explanation .cards:nth-child(3n) {
-    margin-right: 0;
+.explanation .row div:nth-child(2) {
+    margin: 0 10px;
 }
-.explanation .cards h3 {
+.explanation .row > * h3 {
     font-size: 33px;
     padding-top: 40px;
 }
-.explanation .cards p {
+.explanation .row > * p {
     font-size: 18px;
     height: 80px;
 }
-.explanation .cards img {
-    width: 319px;
+.explanation .row > * img {
+    width: 321px;
     height: 275px;
-    border-radius: 20px;
-}
-.explanation .card1 img {
-    box-shadow: 0px 20px 25px gray;
-} */
-
-.explanation table {
-    border-spacing: 10px 20px;
-    color: rgba(102, 69, 53, 1);
-    
-}
-.explanation td {
-    background-color: rgb(255, 255, 255);
-    border-radius: 13px;
-    padding: 0 26px 36px;
-     
-}
-.explanation td h3 {
-    font-size: 33px;
-    padding-top: 40px;
-}
-.explanation td p {
-    font-size: 18px;
-    height: 80px;
-}
-.explanation td img {
-    width: 305px;
-    height: 265px;
     object-fit: cover;
     border-radius: 20px;
+
 }
-.explanation img:hover {
+.explanation .card1 img {
     box-shadow: 0px 20px 25px gray;
 }
 
